@@ -1,6 +1,7 @@
 package org.s3s3l.yggdrasil.orm.exec;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Type;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
@@ -15,8 +16,7 @@ import javax.sql.DataSource;
 
 import org.s3s3l.yggdrasil.orm.bind.annotation.Column;
 import org.s3s3l.yggdrasil.orm.bind.express.DataBindExpress;
-import org.s3s3l.yggdrasil.orm.bind.express.ExpressFactory;
-import org.s3s3l.yggdrasil.orm.bind.express.common.DefaultExpressFactory;
+import org.s3s3l.yggdrasil.orm.bind.express.jsqlparser.JSqlParserDataBindExpress;
 import org.s3s3l.yggdrasil.orm.bind.sql.SqlStruct;
 import org.s3s3l.yggdrasil.orm.exception.DataMapException;
 import org.s3s3l.yggdrasil.orm.exception.SqlExecutingException;
@@ -44,18 +44,17 @@ import lombok.extern.slf4j.Slf4j;
 public class DefaultSqlExecutor implements SqlExecutor {
 
     private final MetaManager metaManager;
-    private ExpressFactory expressFactory = new DefaultExpressFactory();
+    private final DataBindExpress dataBindExpress;
     private DataSource datasource;
 
     public DefaultSqlExecutor(DataSource datasource, MetaManager metaManager) {
-        this.datasource = datasource;
-        this.metaManager = metaManager;
+        this(datasource, new JSqlParserDataBindExpress(metaManager), metaManager);
     }
 
-    public DefaultSqlExecutor(DataSource datasource, ExpressFactory expressFactory, MetaManager metaManager) {
+    public DefaultSqlExecutor(DataSource datasource, DataBindExpress dataBindExpress, MetaManager metaManager) {
         this.datasource = datasource;
-        this.expressFactory = expressFactory;
         this.metaManager = metaManager;
+        this.dataBindExpress = dataBindExpress;
     }
 
     @Override
@@ -64,12 +63,11 @@ public class DefaultSqlExecutor implements SqlExecutor {
     }
 
     @Override
-    public <T> int insert(List<T> model, Class<T> modelClass) {
-        Verify.notEmpty(model);
-        Verify.notNull(modelClass);
+    public <S> int insert(List<S> sources, Class<S> sourceType) {
+        Verify.notEmpty(sources);
+        Verify.notNull(sourceType);
 
-        DataBindExpress express = this.expressFactory.getDataBindExpress(modelClass, metaManager);
-        SqlStruct sqlStruct = express.getInsert(model);
+        SqlStruct sqlStruct = dataBindExpress.getInsert(sources);
         String sql = sqlStruct.getSql();
         log.debug("Excuting sql [{}].", sql);
         try (Connection conn = datasource.getConnection()) {
@@ -84,12 +82,10 @@ public class DefaultSqlExecutor implements SqlExecutor {
     }
 
     @Override
-    public <T> int delete(T model, Class<T> modelClass) {
-        Verify.notEmpty(model);
-        Verify.notNull(modelClass);
+    public <C> int delete(C condition) {
+        Verify.notNull(condition);
 
-        DataBindExpress express = this.expressFactory.getDataBindExpress(modelClass, metaManager);
-        SqlStruct sqlStruct = express.getDelete(model);
+        SqlStruct sqlStruct = dataBindExpress.getDelete(condition);
         String sql = sqlStruct.getSql();
         log.debug("Excuting sql [{}].", sql);
         try (Connection conn = datasource.getConnection()) {
@@ -104,12 +100,11 @@ public class DefaultSqlExecutor implements SqlExecutor {
     }
 
     @Override
-    public <T> int update(T model, Class<T> modelClass) {
-        Verify.notNull(model);
-        Verify.notNull(modelClass);
+    public <S, C> int update(S source, C condition) {
+        Verify.notNull(source);
+        Verify.notNull(condition);
 
-        DataBindExpress express = this.expressFactory.getDataBindExpress(modelClass, metaManager);
-        SqlStruct sqlStruct = express.getUpdate(model);
+        SqlStruct sqlStruct = dataBindExpress.getUpdate(source, condition);
         String sql = sqlStruct.getSql();
         log.debug("Excuting sql [{}].", sql);
         try (Connection conn = datasource.getConnection()) {
@@ -124,12 +119,11 @@ public class DefaultSqlExecutor implements SqlExecutor {
     }
 
     @Override
-    public <T> List<T> select(T model, Class<T> modelClass) {
-        Verify.notNull(model);
-        Verify.notNull(modelClass);
+    public <C, R> List<R> select(C condition, Class<R> resultType) {
+        Verify.notNull(condition);
+        Verify.notNull(resultType);
 
-        DataBindExpress express = this.expressFactory.getDataBindExpress(modelClass, metaManager);
-        SqlStruct sqlStruct = express.getSelect(model);
+        SqlStruct sqlStruct = dataBindExpress.getSelect(condition);
         String sql = sqlStruct.getSql();
         log.debug("Excuting sql [{}].", sql);
         try (Connection conn = datasource.getConnection()) {
@@ -138,9 +132,9 @@ public class DefaultSqlExecutor implements SqlExecutor {
 
                 ResultSet rs = preparedStatement.executeQuery();
 
-                return mapResultTo(modelClass, rs);
+                return mapResultTo(resultType, rs);
             }
-        } catch (SQLException e) {
+        } catch (SQLException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             throw new SqlExecutingException(e);
         }
     }
@@ -157,23 +151,23 @@ public class DefaultSqlExecutor implements SqlExecutor {
         }
     }
 
-    private <T> List<T> mapResultTo(Class<T> resultType, ResultSet rs) throws SQLException {
+    private <T> List<T> mapResultTo(Class<T> resultType, ResultSet rs)
+            throws SQLException, InvocationTargetException, NoSuchMethodException, SecurityException {
         Verify.notNull(resultType);
         Verify.notNull(rs);
 
-        DataBindExpress express = this.expressFactory.getDataBindExpress(resultType, metaManager);
         List<T> resultList = new ArrayList<>();
         ResultSetMetaData metaData = rs.getMetaData();
         Set<Field> fields = ReflectionUtils.getFields(resultType);
 
         try {
             while (rs.next()) {
-                T result = resultType.newInstance();
+                T result = resultType.getConstructor().newInstance();
                 ReflectionBean reflection = new PropertyDescriptorReflectionBean(result);
 
                 for (int i = 1; i <= metaData.getColumnCount(); i++) {
                     String columnLabel = metaData.getColumnLabel(i);
-                    String fieldName = express.getAlias(metaData.getColumnName(i));
+                    String fieldName = metaManager.getAlias(resultType, metaData.getColumnName(i));
 
                     Field field = CollectionUtils.getFirst(fields, r -> r.getName()
                             .equalsIgnoreCase(fieldName));
@@ -185,6 +179,7 @@ public class DefaultSqlExecutor implements SqlExecutor {
 
                         resultData = field.getAnnotation(Column.class)
                                 .typeHandler()
+                                .getConstructor()
                                 .newInstance()
                                 .toJavaType(resultData, fieldClass, fieldType);
                     }
